# Clinical-Research-AI

./: README.md
Backend/: .dockerignore  Dockerfile  app.py  main.py  mcp_server.py  pyproject.toml  requirements.txt
Backend/functions/: diagnosys_symptoms.py  pubmed_articales.py  summary.py
frontend/: package.json
frontend/src/: App.css  App.tsx
